Third commit. Added static pages and another post

--- a/output/authors.html
+++ b/output/authors.html
@@ -10,6 +10,8 @@
         <header id="banner" class="body">
                 <h1><a href="/">Test Site </a></h1>
                 <nav><ul>
+                    <li><a href="/pages/about.html">About</a></li>
+                    <li><a href="/pages/terms-and-conditions.html">Terms and Conditions</a></li>
                     <li><a href="/category/python.html">Python</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
@@ -17,7 +19,7 @@
 <section id="content" class="body">
     <h1>Authors on Test Site</h1>
     <ul>
-        <li><a href="/author/ruairi.html">Ruairi</a> (1)</li>
+        <li><a href="/author/ruairi.html">Ruairi</a> (2)</li>
     </ul>
 </section>
 
