--- a/output/archives.html
+++ b/output/archives.html
@@ -10,6 +10,8 @@
         <header id="banner" class="body">
                 <h1><a href="/">Test Site </a></h1>
                 <nav><ul>
+                    <li><a href="/pages/about.html">About</a></li>
+                    <li><a href="/pages/terms-and-conditions.html">Terms and Conditions</a></li>
                     <li><a href="/category/python.html">Python</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
@@ -17,6 +19,8 @@
 <h1>Archives for Test Site</h1>
 
 <dl>
+    <dt>Thu 20 August 2020</dt>
+    <dd><a href="/second_post.html">Getting the Hang of Things</a></dd>
     <dt>Thu 20 August 2020</dt>
     <dd><a href="/first_post.html">Making a Test Blog.</a></dd>
 </dl>
