--- a/output/categories.html
+++ b/output/categories.html
@@ -10,12 +10,14 @@
         <header id="banner" class="body">
                 <h1><a href="/">Test Site </a></h1>
                 <nav><ul>
+                    <li><a href="/pages/about.html">About</a></li>
+                    <li><a href="/pages/terms-and-conditions.html">Terms and Conditions</a></li>
                     <li><a href="/category/python.html">Python</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
     <h1>Categories on Test Site</h1>
     <ul>
-        <li><a href="/category/python.html">Python</a> (1)</li>
+        <li><a href="/category/python.html">Python</a> (2)</li>
     </ul>
         <section id="extras" class="body">
                 <div class="blogroll">
